[f:3h] Migrate address information to active booking screen; ensure timer is created and visible

--- a/scss/map.scss
+++ b/scss/map.scss
@@ -37,6 +37,10 @@
     }
   }
   &.has-big-info-footer {
-    height: (100 - $bigInfoFooterHeight) * 1%
+    height: (100 - $bigInfoFooterHeight) * 1%;
+
+    &.has-info-subheader {
+      height: (100 - $bigInfoFooterHeight - $smallSubHeaderSize) * 1%
+    }
   }
 }
